# logging-monitor

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: quality_pipeline.yml
logging_monitor/: cli.py  common.py  main.py  view_models.py
logging_monitor/routers/: api.py
tests/: test_api.py  test_cli.py  test_logger.py  test_main.py
