[tool.poetry]
name = "logging-monitor"
version = "0.0.1"
description = ""
authors = ["DZIUREWICZ Piotr <dziurewiczpiotr@gmail.com>"]
readme = "README.md"
packages = [{include = "logging_monitor"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
click = "^8.1.3"

[tool.poetry.group.develop.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.1"
pytest-cov = "^4.0.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
